Update doc scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,11 +155,10 @@ jobs:
             version: "*"
             cxx: "clang++"
             cc: "clang"
-            runs-on: "macos-11"
+            runs-on: "macos-15"
             b2-toolset: "clang"
             is-latest: true
-            is-earliest: true
-            name: "Apple-Clang"
+            name: "Apple-Clang (macOS 15)"
             build-type: "Release"
             build-cmake: true
 
@@ -167,10 +166,10 @@ jobs:
             version: "*"
             cxx: "clang++"
             cc: "clang"
-            runs-on: "macos-11"
+            runs-on: "macos-15"
             b2-toolset: "clang"
             is-latest: true
-            name: "Apple-Clang (ubsan)"
+            name: "Apple-Clang (macOS 15, ubsan)"
             build-type: "RelWithDebInfo"
             ubsan: true
 
@@ -178,12 +177,30 @@ jobs:
             version: "*"
             cxx: "clang++"
             cc: "clang"
-            runs-on: "macos-11"
+            runs-on: "macos-15"
             b2-toolset: "clang"
             is-latest: true
-            name: "Apple-Clang (asan)"
+            name: "Apple-Clang (macOS 15, asan)"
             build-type: "RelWithDebInfo"
             asan: true
+
+          - compiler: "apple-clang"
+            version: "*"
+            cxx: "clang++"
+            cc: "clang"
+            runs-on: "macos-14"
+            b2-toolset: "clang"
+            name: "Apple-Clang (macOS 14)"
+            build-type: "Release"
+
+          - compiler: "apple-clang"
+            version: "*"
+            cxx: "clang++"
+            cc: "clang"
+            runs-on: "macos-13"
+            b2-toolset: "clang"
+            name: "Apple-Clang (macOS 13)"
+            build-type: "Release"
 
           # Linux compilers
           #
@@ -713,6 +730,10 @@ jobs:
     timeout-minutes: 120
 
     steps:
+      - name: Enable Node 16
+        run: |
+          echo "ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION=true" >> $GITHUB_ENV
+
       - name: Clone Boost.WS.Proto
         uses: actions/checkout@v3
         with:
@@ -1002,7 +1023,7 @@ jobs:
     timeout-minutes: 120
 
     steps:
-      - name: Clone Boost.HTTProto
+      - name: Clone WS.Proto
         uses: actions/checkout@v3
         with:
           # Avoid the common API rate limit exceeded error in boostorg by including 100 latest commits in any case
@@ -1017,31 +1038,118 @@ jobs:
           tag-pattern: 'boost-.*\..*\..*'
 
   antora:
-    name: Antora Docs
     needs: [ runner-selection ]
-    runs-on: ${{ fromJSON(needs.runner-selection.outputs.labelmatrix)['ubuntu-latest'] }}
+    strategy:
+      matrix:
+        include:
+          # - { name: Windows, os: windows-latest }
+          - { name: Ubuntu, os: ubuntu-latest }
+          - { name: MacOS, os: macos-latest }
+    name: Antora Docs (${{ matrix.name }})
+    runs-on: ${{ fromJSON(needs.runner-selection.outputs.labelmatrix)[matrix.os] }}
+    defaults:
+      run:
+        shell: bash
     steps:
-      - name: Clone WS.Proto
-        uses: actions/checkout@v3
+      - name: Install packages
+        uses: alandefreitas/cpp-actions/package-install@v1.8.7
+        with:
+          apt-get: git cmake
 
-      - uses: actions/setup-node@v3
+      - name: Clone Boost.WS.Proto
+        uses: actions/checkout@v3
+        with:
+          path: ws-proto-root
+
+      - name: Clone Boost.Http.Proto
+        uses: actions/checkout@v3
+        with:
+          repository: cppalliance/http_proto
+          path: http-proto-root
+          ref: develop
+
+      - name: Clone Boost.Buffers
+        uses: actions/checkout@v3
+        with:
+          path: buffers-root
+          repository: cppalliance/buffers
+          ref: develop
+
+      - name: Clone Boost
+        uses: alandefreitas/cpp-actions/boost-clone@v1.8.2
+        id: boost-clone
+        with:
+          branch: ${{ (github.ref_name == 'master' && github.ref_name) || 'develop' }}
+          boost-dir: boost-source
+          scan-modules-dir: ws-proto-root
+          scan-modules-ignore: ws_proto
+
+      - name: Patch Boost
+        id: patch
+        shell: bash
+        run: |
+          set -xe
+          pwd
+          ls
+          ls -lah boost-source
+
+          # Identify boost module being tested
+          module=${GITHUB_REPOSITORY#*/}
+          echo "module=$module" >> $GITHUB_OUTPUT
+
+          # Identify GitHub workspace root
+          workspace_root=$(echo "$GITHUB_WORKSPACE" | sed 's/\\/\//g')
+          echo -E "workspace_root=$workspace_root" >> $GITHUB_OUTPUT
+
+          # Remove module from boost-source
+          rm -r "boost-source/libs/$module" || true
+
+          # Copy cached boost-source to an isolated boost-root
+          cp -r boost-source boost-root
+
+          # Set boost-root output
+          cd boost-root
+          boost_root="$(pwd)"
+          boost_root=$(echo "$boost_root" | sed 's/\\/\//g')
+          echo -E "boost_root=$boost_root" >> $GITHUB_OUTPUT
+
+          # Patch boost-root with workspace module
+          cp -r "$workspace_root"/ws-proto-root "libs/$module"
+          cp -r "$workspace_root"/buffers-root libs/buffers
+          cp -r "$workspace_root"/http-proto-root libs/http_proto
+
+          python3 tools/boostdep/depinst/depinst.py buffers
+          python3 tools/boostdep/depinst/depinst.py http_proto
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Setup C++
-        uses: alandefreitas/cpp-actions/setup-cpp@v1.8.2
-        id: setup-cpp
-        with:
-          compiler: clang
-          version: 17
+      - name: Setup Ninja
+        if: runner.os == 'Windows'
+        uses: seanmiddleditch/gha-setup-ninja@v5
 
       - name: Build Antora Docs
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git config --global --add safe.directory "$(pwd)"
+          
+          BOOST_SRC_DIR="$(pwd)/boost-root"
+          export BOOST_SRC_DIR
+          cd boost-root/libs/ws_proto
+          
           cd doc
           bash ./build_antora.sh
+          
+          # Antora returns zero even if it fails, so we check if the site directory exists
+          if [ ! -d "build/site" ]; then
+              echo "Antora build failed"
+              exit 1
+          fi
 
       - name: Create Antora Docs Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: antora-docs
+          name: antora-docs-${{ matrix.name }}
           path: doc/build/site
