--- a/doc/mrdocs.yml
+++ b/doc/mrdocs.yml
@@ -14,6 +14,8 @@ filters:
     exclude:
       - 'boost::ws_proto::detail'
       - 'boost::ws_proto::*::detail'
+      - 'boost::system'
+      - 'boost::system::*'
 inaccessible-members: never
 inaccessible-bases: never
 
@@ -25,4 +27,4 @@ base-url: https://www.github.com/cppalliance/ws_proto/blob/develop/include/
 verbose: true
 multipage: true
 
-cmake: '-D BUILD_TESTING=ON'
+cmake: '-D CMAKE_CXX_STANDARD=20 -D BUILD_TESTING=ON'
